--- a/components.html
+++ b/components.html
@@ -8,10 +8,10 @@
     <title>FoodHut | Free Bootstrap 4.3.x template</title>
 
    <!-- font icons -->
-   <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+   <link rel="stylesheet" href="/vendors/themify-icons/css/themify-icons.css">
 
    <!-- Bootstrap + Steller  -->
-   <link rel="stylesheet" href="assets/css/foodhut.css">
+   <link rel="stylesheet" href="/css/foodhut.css">
 </head>
 <body>
 
@@ -881,8 +881,8 @@
     <!-- End of Page Footer -->
    
    <!-- core  -->
-   <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-   <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+   <script src="/vendors/jquery/jquery-3.4.1.js"></script>
+   <script src="/vendors/bootstrap/bootstrap.bundle.js"></script>
 
 </body>
 </html>
